ADD: Third integration

--- a/exe_07_gokuchat/package.json
+++ b/exe_07_gokuchat/package.json
@@ -6,7 +6,8 @@
     "react": "~0.14.6",
     "react-dom": "~0.14.6",
     "babel-preset-react": "~6.3.13",
-    "babel-preset-es2015": "~6.3.13"
+    "babel-preset-es2015": "~6.3.13",
+    "uid": "0.0.2"
   },
   "scripts": {
     "build": "browserify -t [ babelify --presets [es2015 react ] ] app.js -o build.js"
