--- a/exe_07_gokuchat/package.json
+++ b/exe_07_gokuchat/package.json
@@ -7,9 +7,20 @@
     "react-dom": "~0.14.6",
     "babel-preset-react": "~6.3.13",
     "babel-preset-es2015": "~6.3.13",
-    "uid": "0.0.2"
+    "uid": "0.0.2",
+    "babel": "~6.3.26",
+    "express": "~4.13.3",
+    "socket.io-client": "~1.4.4",
+    "socket.io": "~1.4.4",
+    "babel-cli": "~6.4.5"
+  },
+  "babel":{
+    "presets": [
+        "es2015"
+    ]
   },
   "scripts": {
-    "build": "browserify -t [ babelify --presets [es2015 react ] ] app.js -o build.js"
+    "build": "browserify -t [ babelify --presets [es2015 react ] ] app.js -o public/app.js",
+    "start": "babel-node index.js"
   }
 }
