--- a/exe_07_gokuchat/package.json
+++ b/exe_07_gokuchat/package.json
@@ -13,7 +13,8 @@
     "socket.io-client": "~1.4.4",
     "socket.io": "~1.4.4",
     "babel-cli": "~6.4.5",
-    "react-addons-css-transition-group": "~0.14.6"
+    "react-addons-css-transition-group": "~0.14.6",
+    "jquery": "~2.2.0"
   },
   "babel": {
     "presets": [
